# Sentiment-Classifier

./: README.md
app/: Dockerfile.fastapi  Dockerfile.mysql  docker-compose.yaml  pyproject.toml  requirements.txt
app/src/: main.py  settings.py
app/src/model/: database.py  models.py  router.py  schemas.py  textclassifier.py
app/templates/: form.html
